[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Spikes/FallingSpike.png" type="Texture" id=1]
[ext_resource path="res://Resources/Spikes/FallingSpike.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 72 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 3.5 )

[sub_resource type="CircleShape2D" id=4]
radius = 13.0

[node name="FallingSpike" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4.76837e-07, -4.76837e-07 )
texture = ExtResource( 1 )

[node name="ground_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 17 )
collision_mask = 4

[node name="ceiling_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -17 )
collision_mask = 4

[node name="HitBoxArea2D" type="Area2D" parent="."]

[node name="Playercollidecollision" type="CollisionPolygon2D" parent="HitBoxArea2D"]
polygon = PoolVector2Array( -14, -7, -7, -14, -3, -15, 3, -15, 7, -14, 14, -7, 14, -6, 15, -3, 15, -2, 15, 3, 14, 6, 14, 7, 7, 14, 6, 14, 3, 15, -3, 15, -6, 14, -7, 14, -14, 7, -14, 6, -15, 3, -15, -3 )

[node name="PlayerArea2D" type="Area2D" parent="."]

[node name="Player Enter collision" type="CollisionShape2D" parent="PlayerArea2D"]
position = Vector2( 0, 56 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -19.5 )
shape = SubResource( 3 )

[node name="SpikeCollisionshape" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[connection signal="body_entered" from="HitBoxArea2D" to="." method="_on_HitBoxArea2D_body_entered"]
[connection signal="body_entered" from="PlayerArea2D" to="." method="_on_PlayerArea2D_body_entered"]
